option(
	'examples',
	type: 'array',
	choices: [
		'simple',
		'opengl',
		'',
	],
	value: [
		'simple',
		'opengl',
	],
)

option(
	'drivers',
	type: 'array',
	choices: [
		'rift',
		'rift-s',
		'deepoon',
		'psvr',
		'vive',
		'nolo',
		'wmr',
		'xgvr',
		'vrtek',
		'external',
		'android',
	],
	value: [
		'rift',
		'rift-s',
		'deepoon',
		'psvr',
		'vive',
		'nolo',
		'wmr',
		'xgvr',
		'vrtek',
		'external',
	],
)

option(
	'hidapi',
	type: 'combo',
	choices: [
		'auto',
		'libusb',
		'hidraw'
	],
	value: 'auto',
)

option(
	'tests',
	type: 'boolean',
	value: true,
)
